k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: zylo
spec:
  type: ClusterIP # internal only — never exposed outside the cluster
  selector:
    app: postgres-db
  ports:
    - port: 5432
      targetPort: 5432
