k8s/zylo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zylo-ingress
  namespace: zylo
spec:
  ingressClassName: nginx
  rules:
    - host: zylo.52.66.81.90.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: zylo-backend
                port:
                  number: 5000
